--- a/DnDCharacterSheet/DnDCharacterSheet.csproj
+++ b/DnDCharacterSheet/DnDCharacterSheet.csproj
@@ -98,12 +98,19 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Model.cs" />
+    <Compile Include="Models\CharacterWeapon.cs" />
+    <Compile Include="Models\Weapon.cs" />
+    <Compile Include="Models\WeaponType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
+    <Content Include="Assets\YT-dungeons-and-dragons.jpg" />
+    <Content Include="Assets\YT-dungeons-and-dragons.scale-400.jpg" />
+    <Content Include="Data\DnDCharacterSheet.db" />
     <None Include="DnDCharacterSheet_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
@@ -127,10 +134,20 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore">
+      <Version>1.1.2</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite">
+      <Version>1.1.2</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools">
+      <Version>1.1.1</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>5.4.0</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
